tests/purs/failing/RowConstructors3.out
Error found:
in module [33mMain[0m
at tests/purs/failing/RowConstructors3.purs:7:16 - 7:19 (line 7, column 16 - line 7, column 19)

  Could not match kind
  [33m      [0m
  [33m  Type[0m
  [33m      [0m
  with kind
  [33m          [0m
  [33m  Row Type[0m
  [33m          [0m

while checking that type [33mFoo[0m
  has kind [33mRow Type[0m
while inferring the kind of [33mRecord Foo[0m
in type synonym [33mBar[0m

See https://github.com/purescript/documentation/blob/master/errors/KindsDoNotUnify.md for more information,
or to contribute content related to this error.

